--- a/array-grid/style.css
+++ b/array-grid/style.css
@@ -1,9 +1,10 @@
 .box {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     background-color: black;
     border: 1px solid red;
     transition: 0.5s;
+    color: white;
 }
 
 .box:hover {
